dist/1.0/bin/sample/retrieveUnpackaged/objects/Equipment__c.object
<CustomObject>
    <description>Object used to store equipment information used in Hardware Request tasks to create Logistics Order (ZDL)</description>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>client installation</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>POP installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>client deinstallation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POP deinstallation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Barcode__c</fullName>
        <label>Barcode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Costing_Item__c</fullName>
        <description>CECOLSVI-5</description>
        <label>Costing Item</label>
        <referenceTo>SFDC_Costing_Item__c</referenceTo>
        <relationshipLabel>Equipment</relationshipLabel>
        <relationshipName>Equipment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Request_ID__c</fullName>
        <description>ID of Request Document</description>
        <inlineHelpText>ID of Request Document</inlineHelpText>
        <label>Document Request ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Equipment name</description>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Component__c</fullName>
        <description>Order Component to which item should be related. Equipment installations only.</description>
        <label>Order Component (installation only)</label>
        <referenceTo>OrderComponent__c</referenceTo>
        <relationshipLabel>Equipment</relationshipLabel>
        <relationshipName>Equipment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Provisioning_Plan_Task__c</fullName>
        <label>Provisioning Plan Task</label>
        <referenceTo>Provisioning_Plan_Task__c</referenceTo>
        <relationshipLabel>Equipment</relationshipLabel>
        <relationshipName>Equipment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selected_Components_SIDs__c</fullName>
        <label>Selected Components SIDs</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Selected_Components__c</fullName>
        <label>Selected Components</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <label>Task</label>
        <referenceTo>CTask__c</referenceTo>
        <relationshipLabel>Equipment</relationshipLabel>
        <relationshipName>Equipment</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Equipment</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Adding_to_OL_Task</fullName>
        <active>false</active>
        <description>Equipment can be added to &quot;Hardware Request&quot; Task only</description>
        <errorConditionFormula>AND(NOT(ISBLANK( Task__c )),NOT(ISPICKVAL( Task__r.Type__c ,&apos;Hardware Request (PL)&apos;)))</errorConditionFormula>
        <errorMessage>Equipment can be added to &quot;Hardware Request&quot; Task only.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Adding_to_Prov_Plan_Task</fullName>
        <active>false</active>
        <description>It&apos;s allowed to add equipment to Provisioning Plan Task type &quot;Hardware Request&quot; only.</description>
        <errorConditionFormula>AND(NOT(ISBLANK(Provisioning_Plan_Task__c)),NOT(ISPICKVAL(Provisioning_Plan_Task__r.Task_Type__c,&apos;Hardware Request (PL)&apos;)))</errorConditionFormula>
        <errorMessage>Equipment can be added to Hardware Request task only.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Order_Component_selection_1</fullName>
        <active>false</active>
        <description>Selected Order Component has to be related to proper Order Line (via Provisioning Plan Task)</description>
        <errorConditionFormula>AND(NOT(ISBLANK( Order_Component__c)),NOT(ISBLANK( Provisioning_Plan_Task__c )),Order_Component__r.OrderLine__r.Id != Provisioning_Plan_Task__r.Provisioning_Plan__r.Order_Line__r.Id)</errorConditionFormula>
        <errorDisplayField>Order_Component__c</errorDisplayField>
        <errorMessage>Selected Order Component doesn&apos;t belong to the Order Line</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Order_Component_selection_2</fullName>
        <active>false</active>
        <description>Selected Order Component has to be related to proper Order Line (via OL Task)</description>
        <errorConditionFormula>AND(NOT(ISBLANK(Order_Component__c)),NOT(ISBLANK(Task__c)),Order_Component__r.OrderLine__c != Task__r.Order_Line__c)</errorConditionFormula>
        <errorDisplayField>Order_Component__c</errorDisplayField>
        <errorMessage>Selected Order Component doesn&apos;t belong to the Order Line</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Provisioning_Plan_definition</fullName>
        <active>false</active>
        <description>Equipment can not be added to Provisioning Plan Task in Provisioning Plan definition (instance only)</description>
        <errorConditionFormula>Provisioning_Plan_Task__r.Provisioning_Plan__r.Instance__c = false</errorConditionFormula>
        <errorMessage>Equipment data can be added to Provisioning Plan instance only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Service_Component_installation_only</fullName>
        <active>false</active>
        <description>Service Component should be selected for equipment installation only.</description>
        <errorConditionFormula>AND(NOT(ISBLANK(Order_Component__c)),NOT(OR(ISPICKVAL( Action__c, &apos;client installation&apos;),ISPICKVAL( Action__c, &apos;POP installation&apos;))))</errorConditionFormula>
        <errorDisplayField>Order_Component__c</errorDisplayField>
        <errorMessage>Order Component can be selected for installations only.</errorMessage>
    </validationRules>
</CustomObject>